# chompy

./: .cccc-team-template.yaml  .gitignore  PROJECT.md  README.md  docker-compose.yml
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  logging-guidelines.md  quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/03-03-mobile-api-reachability-contract/: check.jsonl  debug.jsonl  implement.jsonl  prd.md  task.json
.trellis/workspace/2018x5zzt/: index.md  journal-1.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: diagnostics.py  health.py  images.py
backend/tests/: test_app.py
docs/: API_CONTRACT.md  DEVELOPMENT_SUMMARY.md  DOCUMENTATION_COVERAGE_MATRIX.md  FEATURE_STATUS_MATRIX.md  HARDWARE_INTEGRATION_AND_SELECTION.md  SERVER_MIGRATION_RUNBOOK.md
mobile/: App.tsx  app.config.js  package-lock.json  package.json
mobile/src/components/common/: Button.tsx
mobile/src/constants/: index.ts
mobile/src/hooks/: useApi.ts
mobile/src/navigation/: AppNavigator.tsx
mobile/src/screens/: HistoryScreen.tsx  HomeScreen.tsx
mobile/src/services/: api.ts  ble.ts
mobile/src/types/: index.ts
